# democracy-elo

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
db/: countries.example.sqlite  countries.sqlite
